syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message MsgCacaoPoolDeposit {
  bytes signer = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  common.Tx tx = 2 [(gogoproto.nullable) = false];
}

message MsgCacaoPoolWithdraw {
  bytes signer = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  common.Tx tx = 2 [(gogoproto.nullable) = false];
  string basis_points = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string affiliate_address = 4 [deprecated = true, (gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Address"];
  string affiliate_basis_points = 5 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
}
