syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";
option (gogoproto.goproto_getters_all) = false;

import "mayachain/v1/x/mayachain/types/type_blame.proto";
import "mayachain/v1/x/mayachain/types/type_keygen.proto";
import "gogoproto/gogo.proto";


message MsgTssPool {
  string id = 1 [(gogoproto.customname) = "ID"];
  string pool_pub_key = 2 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.PubKey"];
  KeygenType keygen_type = 3 [(gogoproto.casttype) = "KeygenType"];
  repeated string pub_keys = 4;
  int64 height = 5;
  Blame blame_legacy = 6 [(gogoproto.nullable) = false, deprecated = true];
  repeated string chains = 7;
  bytes signer = 8  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  int64 keygen_time = 9;
  bytes keyshares_backup = 10;
  // Skipping if we later need to add secp256k1_signature as field number 11
  string pool_pub_key_eddsa = 12 [
    (gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.PubKey",
    (gogoproto.nullable) = true
  ];
  bytes keyshares_backup_eddsa = 13 [
    (gogoproto.nullable) = true
  ];
  repeated Blame blame = 14 [(gogoproto.nullable) = true];
}