syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "gogoproto/gogo.proto";

message AffiliateFeeCollector {
  bytes owner_address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string cacao_amount = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
}